changed project flow, added job application layer